--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>以色列外交官家属在北京遇袭</h1>
     <video width="800" height="1000" controls>
-        <source src="image/00101.mp4" type="video/mp4">
+        <source src="00101.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
