--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <title>视频</title>
 </head>
 <body>
-    <h1>以色列外交官家属在北京遇袭</h1>
-    <video width="800" height="1000" controls>
-        <source src="00101.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <h1>此视频已失效</h1>
+    
+    
 </body>
 </html>
